--- a/src/.yarnrc.yml
+++ b/src/.yarnrc.yml
@@ -1,3 +1,3 @@
 cacheFolder: ./.yarn/cache
-yarnPath: .yarn/releases/yarn-4.3.0.cjs
+#yarnPath: .yarn/releases/yarn-4.3.0.cjs
 nodeLinker: node-modules
