--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Prepare
         run: corepack enable
+      - name: Set environment
+        run: NODE_ENV=github
       - name: Install, build, and upload your site
         uses: withastro/action@v3
         with:
