--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,14 +22,12 @@ jobs:
         uses: actions/checkout@v4
       - name: Prepare
         run: corepack enable
-      - name: Set environment
-        run: NODE_ENV=github
       - name: Install, build, and upload your site
         uses: withastro/action@v4
         with:
           path: ./src # The root location of your Astro project inside the repository. (optional)
           node-version: 22 # The specific version of Node that should be used to build your site. Defaults to 20. (optional)
-          build-cmd: yarn astro build --mode github
+          build-cmd: NODE_ENV=github && yarn astro build --mode github
           # package-manager: pnpm@latest # The Node package manager that should be used to install dependencies and build your site. Automatically detected based on your lockfile. (optional)
         # env:
           # PUBLIC_POKEAPI: 'https://pokeapi.co/api/v2' # Use single quotation marks for the variable value. (optional)
