--- a/src/content/vercellesi-nel-mondo.json
+++ b/src/content/vercellesi-nel-mondo.json
@@ -36,5 +36,91 @@
                 }
             ]
         }
+    ],
+    "passaporto": [
+        { 
+			"id": 0,
+			"image": "passaporto0.jpg", 
+			"name": "Speciale Vercellesi nel Mondo", 
+			"link": "http://www.vercelliweb.tv/speciale-vercellesi-nel-mondo/" 
+		},
+        { 
+			"id": 1,
+			"image": "passaporto1.jpg", 
+			"name": "Puntata 1", 
+			"link": "http://www.vercelliweb.tv/passaporto-puntata-1/" 
+		},
+        { 
+			"id": 2,
+			"image": "passaporto2.jpg", 
+			"name": "Puntata 2", 
+			"link": "http://www.vercelliweb.tv/passaporto-puntata-2/" 
+		},
+        { 
+			"id": 3,
+			"image": "passaporto3.jpg", 
+			"name": "Puntata 3", 
+			"link": "http://www.vercelliweb.tv/passaporto-puntata-3/" 
+		},
+        { 
+			"id": 4,
+			"image": "passaporto4.jpg", 
+			"name": "Puntata 4", 
+			"link": "http://www.vercelliweb.tv/passaporto-puntata-4/" 
+		},
+        { 
+			"id": 5,
+			"image": "passaporto5.jpg", 
+			"name": "Puntata 5", 
+			"link": "http://www.vercelliweb.tv/passaporto-puntata-5/" 
+		},
+        { 
+			"id": 6,
+			"image": "passaporto6.jpg", 
+			"name": "Puntata 6", 
+			"link": "http://www.vercelliweb.tv/passaporto-puntata-6/" 
+		},
+        { 
+			"id": 7,
+			"image": "passaporto7.jpg", 
+			"name": "Puntata 7", 
+			"link": "http://www.vercelliweb.tv/passaporto-puntata-7/" 
+		},
+        { 
+			"id": 8,
+			"image": "passaporto8.jpg", 
+			"name": "Puntata 8", 
+			"link": "http://www.vercelliweb.tv/passaporto-puntata-8/" 
+		},
+        { 
+			"id": 9,
+			"image": "passaporto9.jpg", 
+			"name": "Puntata 9", 
+			"link": "http://www.vercelliweb.tv/passaporto-puntata-9/" 
+		},
+        { 
+			"id": 10,
+			"image": "passaporto10.jpg", 
+			"name": "Puntata 10", 
+			"link": "http://www.vercelliweb.tv/passaporto-puntata-10/" 
+		},
+        { 
+			"id": 11,
+			"image": "passaporto11.jpg", 
+			"name": "Puntata 11", 
+			"link": "http://www.vercelliweb.tv/passaporto-puntata-11/" 
+		},
+        { 
+			"id": 12,
+			"image": "passaporto12.jpg", 
+			"name": "Puntata 12", 
+			"link": "http://www.vercelliweb.tv/passaporto-puntata-12/" 
+		},
+        { 
+			"id": 13,
+			"image": "passaporto13.jpg", 
+			"name": "Puntata 13", 
+			"link": "http://www.vercelliweb.tv/passaporto-puntata-13/"
+		}
     ]
 }
